--- a/MyProjects/productsV1/web/products.html
+++ b/MyProjects/productsV1/web/products.html
@@ -19,19 +19,19 @@
 			}
 		</style>
 	</head>
-	<h1 align=”center”>Product Submit Page</h1>
-	<form method=”POST”
-		action=”SubmitProduct.do”>
+	<h1 align="center">Product Submit Page</h1>
+	<form method="POST"
+		action="ProductServlet">
 		Please insert your products characteristics
 		<p>
 			Barcode:
-			<input name=”barcode” size=”1” required\><br>
+			<input name="barcode"  required\><br>
 			Name:
-			<input name=”name” size=”1” required\><br>
+			<input name="name" required\><br>
 			Color:
-			<input name=”color” size=”1” required\><br>
+			<input name="color" required\><br>
 			Description:
-			<input name=”description” size=”1” required\><br>
+			<input name="description" required\><br>
 			<br><br>
 			<center>
 			<input type="submit">
